# segundo-parcial-horrocks-kobelt

./: CMakeLists.txt
src/: Arbol.cpp  Arbol.h  HashEntry.h  HashMap.h  Lista.h  MailManager.cpp  MailManager.h  email.cpp  email.h  main.cpp  nodoArbol.cpp  nodoArbol.h  nodoKT.h
test/: CMakeLists.txt  tests.cpp
